<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/send" 
          android:title="@string/send" 
          android:showAsAction="always" 
          android:icon="@drawable/ic_send" 
          android:visible="false" android:orderInCategory="3" android:menuCategory="container"/>
    <item android:id="@+id/delete" android:title="@string/delete" android:icon="@drawable/ic_delete" android:visible="false" android:showAsAction="always" android:orderInCategory="1" android:menuCategory="container"></item>
    <item android:id="@+id/undo" android:title="@string/undo" android:showAsAction="always" android:icon="@drawable/undo" ></item>
    <item android:id="@+id/receive" android:menuCategory="container" android:title="@string/receive" android:icon="@drawable/ic_receive" android:showAsAction="always" android:orderInCategory="2"></item>
    <item android:id="@+id/search" android:icon="@drawable/ic_search" android:title="@string/search" android:showAsAction="always"></item>
  
</menu>
